--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <p>ferrera</p>
     <p>ferrera</p>
     <p>hoooollaaa</p>
-<<<<<<< HEAD
     <p>hoooollaaa</p>
     <p>hoooollaaa</p>
     <p>hoooollaaa</p>
@@ -31,9 +30,9 @@
     <p>hoooollaaa</p>
     <p>hoooollaaa</p>
     <p>adios</p>
-=======
     <p>ESTE ES PEY</p>
     <p>Probando</p>
->>>>>>> 7a7317be157b10b9a061c4eee948e8cdea8b6144
+    <p>Rony martinez</p>
+    
 </body>
 </html>
