--- a/index.html
+++ b/index.html
@@ -21,18 +21,8 @@
     <p>ferrera</p>
     <p>ferrera</p>
     <p>hoooollaaa</p>
-    <p>hoooollaaa</p>
-    <p>hoooollaaa</p>
-    <p>hoooollaaa</p>
-    <p>hoooollaaa</p>
-    <p>hoooollaaa</p>
-    <p>hoooollaaa</p>
-    <p>hoooollaaa</p>
-    <p>hoooollaaa</p>
-    <p>adios</p>
     <p>ESTE ES PEY</p>
     <p>Probando</p>
-    <p>Rony martinez</p>
-    
+    <p>Hora del show</p>
 </body>
 </html>
