--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,6 @@
     <p>dadasd</p>
     <p>prueba</p>
     <p>cambio</p>
-    <p>hesler</p>
     <p>ferrera</p>
     <p>ferrera</p>
     <p>hoooollaaa</p>
@@ -28,10 +27,12 @@
     <p>otro cambio</p>
     <p>otro cambio</p>
     <p>otro cambio</p>
-<<<<<<< HEAD
     <p>https://prod.liveshare.vsengsaas.visualstudio.com/join?1DCD19EF55EFF58679D0D34692F0443253FC</p>
-=======
-    <p>Julio se la come</p>
->>>>>>> 38d933af2233dfbe1e3ada724ce75eccf2e42a41
+    <p>Julio se la come toda</p>
+    <p>para que me decis que escriba si lo vas a borrar</p>
+    <p>asdasdasdadad subilo a ver que onda</p>
+
+
+
 </body>
 </html>
