--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -17,7 +17,7 @@
             </div>
 				<ul>
                     <li><a href="">Inicio</a></li>
-                    <li><a href="">Productos</a></li
+                    <li><a href="">Productos</a></li>
                     <li><a href="">Servicios</a></li>
                     <li><a href="">Quienes Somos</a></li>
                     <li><a href="">Cotizaciones</a></li>
@@ -32,9 +32,6 @@
 	
 
     <section id='body'></section>
-    
-
-
         <footer>          
             <div class="container-footer-all">
                  <div class="container-body">    
