--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -24,12 +24,24 @@
                     <li><a href="">Recomendaciones</a></li>
                 </ul>
         </nav>
+
         
-       <section id='banner'></section>
+       <section id='banner'>
+            <div class="boton_p">
+                <a class="boton" href="#">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    Neon Button
+                </a>
+            </div>
+
+       </section>
+
+    
 
 	</header>
-
-	
 
     <section id='body'></section>
         <footer>          
