--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -16,7 +16,7 @@
                 <a href=""></a> <img class="imgnav" src="img/LogoNav2.png" alt="">
             </div>
 				<ul>
-                    <li><a href="">Inicio</a></li>
+                    <li><a href="landing.html">Inicio</a></li>
                     <li><a href="">Productos</a></li>
                     <li><a href="">Servicios</a></li>
                     <li><a href="">Quienes Somos</a></li>
