--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -13,7 +13,7 @@
 	<header>
 		<nav>
             <div class="logo">
-                <a href=""></a> <img class="imgnav" src="img/LogoNav2.png" alt="">
+             <img class="imgnav" src="img/LogoNav2.png" alt="">
             </div>
 				<ul>
                     <li><a href="landing.html">Inicio</a></li>
@@ -33,7 +33,7 @@
                     <span></span>
                     <span></span>
                     <span></span>
-                    Neon Button
+                    ¡COTIZA YA!
                 </a>
             </div>
 
