--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -45,7 +45,7 @@
 
     <section id='body'></section>
         <footer>          
-            <div class="container-footer-all">
+           <!--> <div class="container-footer-all">
                  <div class="container-body">    
                      <div class="colum1">
                          <h1>Mas informacion de la compañia</h1>     
@@ -89,7 +89,7 @@
                          </div>
                      </div>
      
-                 </div>
+                 </div> <!-->
     </footer>
 
 
