--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -62,7 +62,7 @@
                         </div>
                        
                         <div class="mensaje">
-                         <span >Todos los Derechos Reservados &copy; 2020 | <span>   Colonia Nueva Suyapa, Tegucigalpa, MDC, Honduras, Centroamérica</span>  | Telefono +504- 31868987  <i class= "icon-whatsapp" ></i> </span>
+                         <span >Todos los Derechos Reservados &copy; 2020 | <span>   Colonia Nueva Suyapa, Tegucigalpa, MDC, Honduras, Centroamérica</span>  | Telefono +504222280000  <i class= "icon-whatsapp" ></i> </span>
                        </div>
     </footer>
 
