--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -57,7 +57,7 @@
             <a href="https://www.revistaestilo.net/galeria/1366263-449/10-recomendaciones-de-lectura-para-el-qu%C3%A9date-en-casa" class="home"><i class=" icon-home3"></i></a>
         
             <div class="mensaje2">
-             #Quedateencasa
+             #QuedateEnCasa
             </div>
            
             <div class="mensaje">
