--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -39,6 +39,15 @@
 
        </section>
 
+
+
+       <section class="lemacaja">
+
+        <p>"¿Necesitas una herramienta util para poder medir
+            tu alcance, tu éxito?, Contacta Bayser Honduras.</p>
+
+       </section>
+
     
 
 	</header>
