--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -41,11 +41,12 @@
 
 
 
-       <section class="lemacaja">
+       <section >
 
+        <div class=lemacaja>
         <p>"¿Necesitas una herramienta util para poder medir
             tu alcance, tu éxito?, Contacta Bayser Honduras.</p>
-
+        </div>
        </section>
 
     
