--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -45,7 +45,7 @@
 
         <div class=lemacaja>
         <p>"¿Necesitas una herramienta util para poder medir
-            tu alcance, tu éxito?, Contacta Bayser Honduras.</p>
+            tu alcance, tu éxito?,  <br> Contacta Bayser Honduras.</p>
         </div>
        
 
