--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -44,7 +44,7 @@
     
 
         <div class=lemacaja>
-        <p>"¿Necesitas una herramienta util para poder medir
+        <p>"¿Necesitas una herramienta util <br> para poder medir
             tu alcance, tu éxito?,  <br> Contacta Bayser Honduras.</p>
         </div>
        
