--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -85,7 +85,7 @@
             </div>
            
             <div class="mensaje">
-             <span >Todos los Derechos Reservados &copy; 2020 | <span>   Colonia Nueva Suyapa, Tegucigalpa, MDC, Honduras, Centroamérica</span>  | Telefono +504222280000  <i class= "icon-whatsapp" ></i> </span>
+             <span >Todos los Derechos Reservados &copy; 2020 | <span>   Colonia Nueva Suyapa, Tegucigalpa, MDC, Honduras, Centroamérica</span>  | Teléfono +5049999-9999  <i class= "icon-whatsapp" ></i> </span>
            </div>
 </footer>
 
