--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -18,7 +18,7 @@
             </div>
 				<ul>
                     <li><a href="landing.html">Inicio</a></li>
-                    <li><a href="">Productos</a>
+                    <li><a href="../plantilla/plantilla.html">Productos</a>
                         <ul class=>
                             <li><a href="">Basculas de Precision</a></li>
                             <li><a href="">Basculas de Industriales</a></li>
@@ -27,7 +27,7 @@
 
                     <li><a href="">Servicios</a>
                         <ul >
-                            <li><a href="">Venta</a></li>
+                            <li><a href="../plantilla/plantilla.html">Venta</a></li>
                             <li><a href="">Instalación</a></li>
                             <li><a href="">Mantenimiento</a></li>
                         </ul>
