--- a/Bayser-Portal/plantilla/plantilla.html
+++ b/Bayser-Portal/plantilla/plantilla.html
@@ -17,7 +17,7 @@
              <img class="imgnav" src="img/LogoNav2.png" alt="">
             </div>
 				<ul>
-                    <li><a href="landing.html">Inicio</a></li>
+                    <li><a href="../bayser diseño 2/landing.html">Inicio</a></li>
                     <li><a href="">Productos</a>
                         <ul class=>
                             <li><a href="">Basculas de Precision</a></li>
