--- a/Bayser-Portal/plantilla/plantilla.html
+++ b/Bayser-Portal/plantilla/plantilla.html
@@ -52,7 +52,7 @@
                 <div class="direccion-ubicacion">Colonia Nueva Suyapa, Tegucigalpa, MDC, Honduras, Centroamérica</div>
             </section>
             <section class="horario col-3">
-                <div class="icono-horario"></div>
+                <div class="icono-horario"><i class= "icon-time" ></i></div>
                 <div class="texto-horario">Horario: Lunes a Viernes de 8:00 am a 5:00 pm <br> Sabados y Domingos Cerrado </div>
             </section>
             <section class="socios col-3">
