--- a/Bayser-Portal/plantilla/plantilla.html
+++ b/Bayser-Portal/plantilla/plantilla.html
@@ -60,14 +60,18 @@
                 <div class="icono-socios"></div>
             </section>
         </div>
-        <div class="pregunta">¿Ya nos sigues?</div>
+        <div class="pregunta">
+            <span class="pregunta-span">¿Ya nos sigues?</span>
+        </div>
         <section class="redes-sociales">    
-            <a href="https://accounts.google.com/ServiceLogin?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1" class="mail"><i class= "icon-mail4" ></i></a>
-            <a href="https://es-la.facebook.com/bayser.hn/" class="facebook"><i class= "icon-facebook2" ></i></a>
-            <a href="https://www.revistaestilo.net/galeria/1366263-449/10-recomendaciones-de-lectura-para-el-qu%C3%A9date-en-casa" class="home"><i class=" icon-home3"></i></a>
+            <a target="_blank" href="https://accounts.google.com/ServiceLogin?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1" class="icono-mail"><i class= "icon-email" ></i></a>
+            <a target="_blank" href="https://es-la.facebook.com/bayser.hn/" class="icono-facebook"><i class= "icon-facebook" ></i></a>
+            <a target="_blank" href="" class="icono-whatsapp"><i class="icon-whatsapp"></i></a>
+            <a target="_blank" href="" class="icono-celular"><i class="icon-phone"></i></a>
+            <a target="_blank" href="https://www.revistaestilo.net/galeria/1366263-449/10-recomendaciones-de-lectura-para-el-qu%C3%A9date-en-casa" class="home"><i class=" icon-home3"></i></a>
         </section>
         <div class="mensaje">
-            <span >Copyright &copy; 2020 | Teléfono +5049999-9999  </span>
+            <span >Copyright &copy; 2020 | Los Piratas  </span>
         </div>
 </footer>
 
