--- a/Bayser-Portal/plantilla/plantilla.html
+++ b/Bayser-Portal/plantilla/plantilla.html
@@ -48,23 +48,36 @@
         </div>   
         <div class="container">
             <section class="ubicacion col-3">
-                <div class="icono-ubicacion"></div>
-                <div class="direccion-ubicacion">Colonia Nueva Suyapa, Tegucigalpa, MDC, Honduras, Centroamérica</div>
+                <div class="icono-ubicacion">
+                    <i class= "icon-location"></i>
+                    <div class="informacion-ubicacion">
+                        <h3>Ubicación</h3>
+                        <p class="direccion-ubicacion">Colonia Nueva Suyapa,</Br> Tegucigalpa, MDC, Honduras,<br> Centroamérica</p>
+                    </div>
+                </div>
             </section>
             <section class="horario col-3">
-                <div class="icono-horario"><i class= "icon-time" ></i></div>
-                <div class="texto-horario">Horario: Lunes a Viernes de 8:00 am a 5:00 pm <br> Sabados y Domingos Cerrado </div>
+                <div class="icono-horario">
+                    <i class= "icon-time" ></i>
+                    <div class="informacion-horario">
+                        <h3>Horario</h3>
+                        <p class="texto-horario">Lunes a Viernes de 8:00 am a 5:00 pm <br> Sabados y Domingos Cerrado</p>
+                    </div>
+                </div>
             </section>
             <section class="socios col-3">
-                <h3 class="titulo-socios">Socios de Bayser Honduras</h3>
-                <div class="icono-socios"></div>
+                <div class="icono-ohaus">
+                    <h3 class="titulo-socios">Socios de Bayser Honduras</h3>
+                    <img class="icono-socio-ohaus" src="img/ohaus2.png" alt="ohaus">
+                    <div class="icono-socios"></div>
+                </div>
             </section>
         </div>
         <div class="pregunta">
             <span class="pregunta-span">¿Ya nos sigues?</span>
         </div>
         <section class="redes-sociales">    
-            <a target="_blank" href="https://accounts.google.com/ServiceLogin?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1" class="enlace-mail"><i class= "icon-email" ></i><span class="span-email">Envianos un correo</span></a>
+            <a target="_blank" href="https://accounts.google.com/ServiceLogin?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1" class="enlace-mail"><i class= "icon-email" ></i><span class="span-email">Envíanos un correo</span></a>
             <a target="_blank" href="https://es-la.facebook.com/bayser.hn/" class="enlace-facebook"><i class= "icon-facebook" ></i><span class="span-facebook">Seamos Amigos</span></a>
             <a target="_blank" href="" class="enlace-whatsapp"><i class="icon-whatsapp"></i><span class="span-whatsapp">+504-9999-9999</span></a>
             <a target="_blank" href="" class="enlace-celular"><i class="icon-phone"></i><span class="span-celular">+504-9999-9999</span></a>
