--- a/Bayser-Portal/plantilla/plantilla.html
+++ b/Bayser-Portal/plantilla/plantilla.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
 	<meta charset="UTF-8">
 	<title>Bayser Honduras</title>
-
     <link rel="stylesheet" href="plantilla.css">
     <link rel="stylesheet" href="fonts/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&display=swap" rel="stylesheet"> 
@@ -38,11 +37,8 @@
                 </ul>
         </nav>
 	</header>
-
     <section id='body'></section>
-    
     <footer>          
-           
         <div class="mensaje1">
             <h3>Bayser Honduras</h3>
         </div>   
@@ -86,7 +82,5 @@
             <span >Copyright &copy; 2020 | Los Piratas  </span>
         </div>
 </footer>
-
-
 </body>
 </html>
