--- a/Bayser-Portal/plantilla/plantilla.html
+++ b/Bayser-Portal/plantilla/plantilla.html
@@ -63,7 +63,7 @@
             </section>
             <section class="socios col-3">
                 <div class="icono-ohaus">
-                    <h3 class="titulo-socios">Socios de Bayser Honduras</h3>
+                    <h3 class="titulo-socios">Distribuidores de Bayser Honduras</h3>
                     <img class="icono-socio-ohaus" src="img/ohaus2.png" alt="ohaus">
                     <div class="icono-socios"></div>
                 </div>
