--- a/Bayser-Portal/Instalaciones/instalacion.html
+++ b/Bayser-Portal/Instalaciones/instalacion.html
@@ -28,9 +28,9 @@
 
                     <li><a href="">Servicios</a>
                         <ul >
-                            <li><a href="ventas.html">Venta</a></li>
+                            <li><a href="../Ventas/venta.html.html">Venta</a></li>
                             <li><a href="instalacion.html">Instalación</a></li>
-                            <li><a href="mantenimiento.html">Mantenimiento</a></li>
+                            <li><a href="">Mantenimiento</a></li>
                         </ul>
                     </li>
                     <li><a href="">Quienés Somos</a></li>
