--- a/Bayser-Portal/Ventas/venta.html
+++ b/Bayser-Portal/Ventas/venta.html
@@ -29,8 +29,8 @@
 
                     <li><a href="">Servicios</a>
                         <ul >
-                            <li><a href="">Venta</a></li>
-                            <li><a href="">Instalación</a></li>
+                            <li><a href="venta.html">Venta</a></li>
+                            <li><a href="../Instalaciones/instalacion.html">Instalación</a></li>
                             <li><a href="">Mantenimiento</a></li>
                         </ul>
                     </li>
