--- a/Bayser-Portal/Instalaciones/instalacion.html
+++ b/Bayser-Portal/Instalaciones/instalacion.html
@@ -28,7 +28,7 @@
 
                     <li><a href="">Servicios</a>
                         <ul >
-                            <li><a href="../Ventas/venta.html.html">Venta</a></li>
+                            <li><a href="../Ventas/venta.html">Venta</a></li>
                             <li><a href="instalacion.html">Instalación</a></li>
                             <li><a href="">Mantenimiento</a></li>
                         </ul>
