--- a/Bayser-Portal/Instalaciones/instalacion.html
+++ b/Bayser-Portal/Instalaciones/instalacion.html
@@ -96,7 +96,7 @@
             <h1>Instalaciones</h1>
             <div class="imagenventa">
 
-                <img class="pick" src="img/Insta1.jpeg" alt="">
+                <img class="pick" src="img/insta0.jpeg" alt="">
 
             </div>
 
