--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -29,7 +29,7 @@
                         <ul >
                             <li><a href="../Ventas/venta.html">Venta</a></li>
                             <li><a href="../Instalaciones/instalacion.html">Instalación</a></li>
-                            <li><a href="">Mantenimiento</a></li>
+                            <li><a href="../Mantenimiento/mante.html">Mantenimiento</a></li>
                         </ul>
                     </li>
                     <li><a href="../plantilla/plantilla.html">Quienés Somos</a></li>
