--- a/Bayser-Portal/Formulario 1/formulario1.html
+++ b/Bayser-Portal/Formulario 1/formulario1.html
@@ -29,13 +29,13 @@
 
                     <li><a href="">Servicios</a>
                         <ul >
-                            <li><a href="">Venta</a></li>
-                            <li><a href="">Instalación</a></li>
-                            <li><a href="">Mantenimiento</a></li>
+                            <li><a href="../Ventas/venta.html">Venta</a></li>
+                            <li><a href="../Instalaciones/instalacion.html">Instalación</a></li>
+                            <li><a href="../Mantenimiento/mante.html">Mantenimiento</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Quienés Somos</a></li>
-                    <li><a href="">Cotizaciones</a></li>
+                    <li><a href="../quienes_somos/quienes_somos.html">Quienés Somos</a></li>
+                    <li><a href="formulario1.html">Cotizaciones</a></li>
                     <li><a href="">Recomendaciones</a></li>
                 </ul>
         </nav>
