--- a/Bayser-Portal/quienes_somos/quienes_somos.html
+++ b/Bayser-Portal/quienes_somos/quienes_somos.html
@@ -43,7 +43,7 @@
         
     </header>
 
-    <section>
+    <section class="quienes">
         <div class="container_1">
             <div class="box">
                 <div class="icon">M</div>
@@ -53,7 +53,7 @@
                     el desarrollo integral de todo nuestro personal. 
                     Fomentando la concientización y cultura en el 
                     cumplimiento de las normas.</p>
-                    <a class="info" href="#">Read More</a>
+                    <!-- <a class="info" href="#">Read More</a> -->
                 </div>
             </div>
 
@@ -64,7 +64,7 @@
                     <p>Ser un proveedor de servicios de metrología con una 
                         actitud que inspire confianza y seguridad en 
                         nuestros clientes.</p>
-                    <a class="info" href="#">Read More</a>
+                    <!-- <a class="info" href="#">Read More</a> -->
                 </div>
             </div>
 
@@ -77,7 +77,7 @@
                     verificación, proporcionando un servicio eficaz y oportuno.</p>
                     <p>-Cumplir los requisitos de las Normas Nacionales e 
                         Internacionales cuyo objetivo sea una mejora continua.</p>
-                    <a class="info" href="#">Read More</a>
+                    <!-- <a class="info" href="#">Read More</a> -->
                 </div>
             </div>
         </div>
