--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -20,9 +20,9 @@
                     <li><a href="landing.html">Inicio</a></li>
                     <li><a href="">Productos</a>
                         <ul class=>
-                            <li><a href="">Basculas de Precision</a></li>
-                            <li><a href="">Basculas de Industriales</a></li>
-                            <li><a href="">Basculas de Comerciales</a></li>
+                            <li><a href="../productos/html/basculas_precision.html">Basculas de Precision</a></li>
+                            <li><a href="../productos/html/basculas_industriales.html">Basculas de Industriales</a></li>
+                            <li><a href="../productos/html/basculas_comerciales.html">Basculas de Comerciales</a></li>
                         </ul></li>
 
                     <li><a href="">Servicios</a>
