--- a/Bayser-Portal/productos/html/basculas_industriales.html
+++ b/Bayser-Portal/productos/html/basculas_industriales.html
@@ -20,7 +20,7 @@
              <img class="imgnav" src="../img/LogoNav2.png" alt="">
             </div>
 				<ul>
-                    <li><a href="landing.html">Inicio</a></li>
+                    <li><a href="../../bayser diseño 2/landing.html">Inicio</a></li>
                     <li><a href="">Productos</a>
                         <ul class=>
                             <li><a href="../html/basculas_precision.html">Basculas de Precision</a></li>
