--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="fonts/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&display=swap" rel="stylesheet"> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src='navlanding.js'></script>
+	<script src='../navjs.js'></script>
 </head>
 <body>
 	<header>
@@ -16,7 +16,7 @@
             <div class="logo">
              <img class="imgnav" src="img/LogoNav2.png" alt="">
             </div>
-				<ul>
+				<ul class="hidden">
                     <li><a href="landing.html">Inicio</a></li>
                     <li><a href="">Productos</a>
                         <ul class=>
@@ -35,9 +35,13 @@
                     <li><a href="../plantilla/plantilla.html">Quienés Somos</a></li>
                     <li><a href="../plantilla/plantilla.html">Cotizaciones</a></li>
                     <li><a href="../plantilla/plantilla.html">Recomendaciones</a></li>
-                </ul>
+                    <div class="btn_hamburger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </ul> 
         </nav>
-
         
        <section id='banner'>
             <div class="boton_p">
