--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -32,9 +32,9 @@
                             <li><a href="../Mantenimiento/mante.html">Mantenimiento</a></li>
                         </ul>
                     </li>
-                    <li><a href="../plantilla/plantilla.html">Quienés Somos</a></li>
-                    <li><a href="../plantilla/plantilla.html">Cotizaciones</a></li>
-                    <li><a href="../plantilla/plantilla.html">Recomendaciones</a></li>
+                    <li><a href="../quienes_somos/quienes_somos.html">Quienés Somos</a></li>
+                    <li><a href="../Formulario 1/formulario1.html">Cotizaciones</a></li>
+                    <li><a href="../Formulario 2/formulario2.html">Recomendaciones</a></li>
                     <div class="btn_hamburger">
                         <div></div>
                         <div></div>
@@ -45,7 +45,7 @@
         
        <section id='banner'>
             <div class="boton_p">
-                <a class="boton" href="#">
+                <a class="boton" href="../Formulario 1/formulario1.html">
                     <span></span>
                     <span></span>
                     <span></span>
