--- a/Bayser-Portal/Formulario 1/formulario1.html
+++ b/Bayser-Portal/Formulario 1/formulario1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="fonts/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&display=swap" rel="stylesheet"> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src='formulario1.js'></script>
+    <script src='../navjs.js'></script>
     <script src="formulariov.js"></script>
     <script src="jquery-3.1.0.min.js"></script>
 	<script src="main.js"></script>
@@ -18,13 +18,13 @@
             <div class="logo">
              <img class="imgnav" src="img/LogoNav2.png" alt="">
             </div>
-				<ul>
+				<ul class="hidden">
                     <li><a href="../bayser diseño 2/landing.html">Inicio</a></li>
                     <li><a href="">Productos</a>
                         <ul class=>
-                            <li><a href="">Basculas de Precision</a></li>
-                            <li><a href="">Basculas de Industriales</a></li>
-                            <li><a href="">Basculas de Comerciales</a></li>
+                            <li><a href="../productos/html/basculas_precision.html">Basculas de Precision</a></li>
+                            <li><a href="../productos/html/basculas_industriales.html">Basculas de Industriales</a></li>
+                            <li><a href="../productos/html/basculas_comerciales.html">Basculas de Comerciales</a></li>
                         </ul></li>
 
                     <li><a href="">Servicios</a>
@@ -36,10 +36,14 @@
                     </li>
                     <li><a href="../quienes_somos/quienes_somos.html">Quienés Somos</a></li>
                     <li><a href="formulario1.html">Cotizaciones</a></li>
-                    <li><a href="">Recomendaciones</a></li>
-                </ul>
+                    <li><a href="../Formulario 2/formulario2.html">Recomendaciones</a></li>
+                    <div class="btn_hamburger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                </ul> 
         </nav>
-
         <section>
         <div class="informacion">
 
