--- a/Bayser-Portal/Formulario 2/formulario2.html
+++ b/Bayser-Portal/Formulario 2/formulario2.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Bayser Honduras</title>
+    <title>Bayser Honduras</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="formulario2.css">
     <link rel="stylesheet" href="fonts/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&display=swap" rel="stylesheet"> 
