--- a/Bayser-Portal/Instalaciones/instalacion.html
+++ b/Bayser-Portal/Instalaciones/instalacion.html
@@ -5,6 +5,7 @@
 	<title>Bayser Honduras</title>
     <link rel="stylesheet" href="instalacion.css">
     <link rel="stylesheet" href="fonts/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&display=swap" rel="stylesheet"> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='../navjs.js'></script>
