--- a/Bayser-Portal/quienes_somos/quienes_somos.html
+++ b/Bayser-Portal/quienes_somos/quienes_somos.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="quienes.css">
     <link rel="stylesheet" href="fonts/style.css">
     <link rel="stylesheet" href="fonts1/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&display=swap" rel="stylesheet"> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='../navjs.js'></script>
