--- a/Bayser-Portal/productos/html/basculas_precision.html
+++ b/Bayser-Portal/productos/html/basculas_precision.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="logo">
-             <img class="imgnav" src="img/LogoNav2.png" alt="">
+             <img class="imgnav" src="../img/LogoNav2.png" alt="">
             </div>
 				<ul class="hidden">
                     <li><a href="../../bayser diseño 2/landing.html">Inicio</a></li>
