--- a/Bayser-Portal/Formulario 2/formulario2.html
+++ b/Bayser-Portal/Formulario 2/formulario2.html
@@ -115,28 +115,26 @@
 
 
     <section id='body'></section>
-    <footer>
-        <div class="mensaje1">
+    <footer>          
+        <div class="titulo-footer">
             <h3>Bayser Honduras</h3>
-        </div>
+        </div>   
         <div class="container">
             <section class="ubicacion col-3">
                 <div class="icono-ubicacion">
-                    <i class="icon-location"></i>
+                    <i class= "icon-location"></i>
                     <div class="informacion-ubicacion">
                         <h3>Ubicación</h3>
-                        <p class="direccion-ubicacion">Colonia Nueva Suyapa,</Br> Tegucigalpa, MDC, Honduras,<br>
-                            Centroamérica</p>
+                        <p class="direccion-ubicacion">Colonia Nueva Suyapa,</Br> Tegucigalpa, MDC, Honduras,<br> Centroamérica</p>
                     </div>
                 </div>
             </section>
             <section class="horario col-3">
                 <div class="icono-horario">
-                    <i class="icon-time"></i>
+                    <i class= "icon-time" ></i>
                     <div class="informacion-horario">
                         <h3>Horario</h3>
-                        <p class="texto-horario">Lunes a Viernes de 8:00 am a 5:00 pm <br> Sabados y Domingos Cerrado
-                        </p>
+                        <p class="texto-horario">Lunes a Viernes de 8:00 am a 5:00 pm <br> Sabados y Domingos Cerrado</p>
                     </div>
                 </div>
             </section>
@@ -151,21 +149,16 @@
         <div class="pregunta">
             <span class="pregunta-span">¿Ya nos sigues?</span>
         </div>
-        <section class="redes-sociales">
-            <a target="_blank"
-                href="https://accounts.google.com/ServiceLogin?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1"
-                class="enlace-mail"><i class="icon-email"></i><span class="span-email">Envíanos un correo</span></a>
-            <a target="_blank" href="https://es-la.facebook.com/bayser.hn/" class="enlace-facebook"><i
-                    class="icon-facebook"></i><span class="span-facebook">Seamos Amigos</span></a>
-            <a target="_blank" href="" class="enlace-whatsapp"><i class="icon-whatsapp"></i><span
-                    class="span-whatsapp">+504-9999-9999</span></a>
-            <a target="_blank" href="" class="enlace-celular"><i class="icon-phone"></i><span
-                    class="span-celular">+504-9999-9999</span></a>
+        <section class="redes-sociales">    
+            <a target="_blank" href="https://accounts.google.com/ServiceLogin?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&service=mail&sacu=1&rip=1" class="enlace-mail"><i class= "icon-email" ></i><span class="span-email">Envíanos un correo</span></a>
+            <a target="_blank" href="https://es-la.facebook.com/bayser.hn/" class="enlace-facebook"><i class= "icon-facebook" ></i><span class="span-facebook">Seamos Amigos</span></a>
+            <a target="_blank" href="" class="enlace-whatsapp"><i class="icon-whatsapp"></i><span class="span-whatsapp">+504-9999-9999</span></a>
+            <a target="_blank" href="" class="enlace-celular"><i class="icon-phone"></i><span class="span-celular">+504-9999-9999</span></a>
         </section>
-        <div class="mensaje">
-            <span>Copyright &copy; 2020 | Los Piratas </span>
+        <div class="Copyright">
+            <span >Copyright &copy; 2020 | Los Piratas  </span>
         </div>
-    </footer>
+</footer>
 </body>
 
 </html>
