--- a/Bayser-Portal/productos/html/basculas_comerciales.html
+++ b/Bayser-Portal/productos/html/basculas_comerciales.html
@@ -126,7 +126,7 @@
             <section class="socios col-3">
                 <div class="icono-ohaus">
                     <h3 class="titulo-socios">Distribuidores de Bayser Honduras</h3>
-                    <img class="icono-socio-ohaus" src="../img/ohaus2.png" alt="ohaus">
+                    <img class="icono-socio-ohaus" src="/img/ohaus2.png" alt="ohaus">
                     <div class="icono-socios"></div>
                 </div>
             </section>
