--- a/Bayser-Portal/Mantenimiento/mante.html
+++ b/Bayser-Portal/Mantenimiento/mante.html
@@ -127,7 +127,7 @@
 
     <section id='body'></section>
     <footer>          
-        <div class="mensaje1">
+        <div class="titulo-footer">
             <h3>Bayser Honduras</h3>
         </div>   
         <div class="container">
@@ -151,7 +151,7 @@
             </section>
             <section class="socios col-3">
                 <div class="icono-ohaus">
-                    <h3 class="titulo-socios">Distribuidor de Bayser Honduras</h3>
+                    <h3 class="titulo-socios">Distribuidores de Bayser Honduras</h3>
                     <img class="icono-socio-ohaus" src="img/ohaus2.png" alt="ohaus">
                     <div class="icono-socios"></div>
                 </div>
@@ -166,7 +166,7 @@
             <a target="_blank" href="" class="enlace-whatsapp"><i class="icon-whatsapp"></i><span class="span-whatsapp">+504-9999-9999</span></a>
             <a target="_blank" href="" class="enlace-celular"><i class="icon-phone"></i><span class="span-celular">+504-9999-9999</span></a>
         </section>
-        <div class="mensaje">
+        <div class="Copyright">
             <span >Copyright &copy; 2020 | Los Piratas  </span>
         </div>
 </footer>
