--- a/Bayser-Portal/plantilla/plantilla.html
+++ b/Bayser-Portal/plantilla/plantilla.html
@@ -99,7 +99,7 @@
 
     <section id='body'></section>
     <footer>          
-        <div class="mensaje1">
+        <div class="titulo-footer">
             <h3>Bayser Honduras</h3>
         </div>   
         <div class="container">
@@ -138,7 +138,7 @@
             <a target="_blank" href="" class="enlace-whatsapp"><i class="icon-whatsapp"></i><span class="span-whatsapp">+504-9999-9999</span></a>
             <a target="_blank" href="" class="enlace-celular"><i class="icon-phone"></i><span class="span-celular">+504-9999-9999</span></a>
         </section>
-        <div class="mensaje">
+        <div class="Copyright">
             <span >Copyright &copy; 2020 | Los Piratas  </span>
         </div>
 </footer>
