--- a/Bayser-Portal/Formulario 1/formulario1.html
+++ b/Bayser-Portal/Formulario 1/formulario1.html
@@ -48,7 +48,7 @@
         <section>
         <div class="informacion">
 
-        <form action="plantilla.html" class="form" method="POST" id="fcot" novalidate>
+        <form action="formulario1.html" class="form" method="POST" id="fcot" novalidate>
            <div class="form-header">
                <h1 class="form-title">C<span>otizació</span>n</h1>
            </div> 
