--- a/Bayser-Portal/Formulario 2/formulario2.html
+++ b/Bayser-Portal/Formulario 2/formulario2.html
@@ -53,7 +53,7 @@
 
             <div class="informacion">
 
-                <form class="form" action="plantilla.html" method="POST" id="fcot" novalidate>
+                <form class="form" action="formulario2.html" method="POST" id="fcot" novalidate>
                     <div class="form-header">
                         <h1 class="form-title">E<span>ncuest</span>a</h1>
                     </div>
