--- a/Bayser-Portal/Instalaciones/instalacion.html
+++ b/Bayser-Portal/Instalaciones/instalacion.html
@@ -96,36 +96,25 @@
 
     <section>
 
-       
-
+        <h1>Instalaciones</h1>
         <div class="informacion">
-            <h1>Instalaciones</h1>
-            <div class="imagenventa">
-
+           
+            <div class="imagenventa col-m-2">
                 <img class="pick" src="img/insta0.jpeg" alt="">
-
             </div>
-
-            <div class=lineapinta>
-
+            <div class="lineapinta"></div>
+            <div class="contenido col-m-4">
+                <div class="parrafo">
+                    <p>
+                        En Bayser Honduras contamos con el personal altamente calificado para llevar a cabo instalaciones
+                        de basculas industriales, de laboratorio y de comercio común. </p>
+                </div>
+                <div class="parrafo">
+                    <p>
+                        Nuestras instalaciones son realizadas bajo las normas de recomendación internacional OIML y la norma ISO 17025:2017.
+                    </p>
+                </div>
             </div>
-
-            <div class="parrafo1">
-
-                <p>
-                    En Bayser Honduras contamos con el personal altamente calificado para llevar a cabo instalaciones
-                    de basculas industriales, de laboratorio y de comercio común.
-
-            </div>
-
-            <div class="parrafo2">
-                <p>
-                    Nuestras instalaciones son realizadas bajo las normas de recomendación internacional OIML y la norma ISO 17025:2017.
-                </p>
-
-            </div>
-
-
         </div>
 
 
