--- a/Bayser-Portal/Instalaciones/instalacion.html
+++ b/Bayser-Portal/Instalaciones/instalacion.html
@@ -19,7 +19,7 @@
              <img class="imgnav" src="img/LogoNav2.png" alt="">
             </div>
 				<ul class="hidden">
-                    <li><a href="landing.html">Inicio</a></li>
+                    <li><a href="../bayser diseño 2/landing.html">Inicio</a></li>
                     <li><a href="">Productos</a>
                         <ul class=>
                             <li><a href="../productos/html/basculas_precision.html">Basculas de Precision</a></li>
@@ -34,9 +34,9 @@
                             <li><a href="../Mantenimiento/mante.html">Mantenimiento</a></li>
                         </ul>
                     </li>
-                    <li><a href="../plantilla/plantilla.html">Quienés Somos</a></li>
-                    <li><a href="../plantilla/plantilla.html">Cotizaciones</a></li>
-                    <li><a href="../plantilla/plantilla.html">Recomendaciones</a></li>
+                    <li><a href="../quienes_somos/quienes_somos.html">Quienés Somos</a></li>
+                    <li><a href="../Formulario 1/formulario1.html">Cotizaciones</a></li>
+                    <li><a href="../Formulario 2/formulario2.html">Recomendaciones</a></li>
                     <div class="btn_hamburger">
                         <div></div>
                         <div></div>
