--- a/Bayser-Portal/Mantenimiento/mante.html
+++ b/Bayser-Portal/Mantenimiento/mante.html
@@ -96,29 +96,22 @@
     <section>
 
        
-
+        <h1>Mantenimiento</h1>
         <div class="informacion">
-            <h1>Mantenimiento</h1>
-            <div class="imagenventa">
-
+            <div class="imagenventa col-m-2">
                 <img class="pick" src="img/man1.jpeg" alt="">
-
             </div>
-
-            <div class=lineapinta>
-
+            <div class=lineapinta></div>
+            <div class="contenido col-m-4">
+                <div class="parrafo">
+                    <p>
+                        En Bayser Honduras estamos altamente capacitados para poder brindar servicio de mantenimiento que consiste en
+                        brindarle soluciones a nuestros clientes con respecto a sus productos.
+                        Estamos certificados bajo la norma internacional OIML y la norma ISO 17025:2017
+                        para llevar a cabo reparaciones, calibraciones y restauraciones de basculas.
+                    </p>
+                </div>
             </div>
-
-            <div class="parrafo1">
-
-                <p>
-                    En Bayser Honduras estamos altamente capacitados para poder brindar servicio de mantenimiento que consiste en
-                     brindarle soluciones a nuestros clientes con respecto a sus productos.
-                    Estamos certificados bajo la norma internacional OIML y la norma ISO 17025:2017
-                     para llevar a cabo reparaciones, calibraciones y restauraciones de basculas.
-                </p>
-
-            </div>S
         </div>
 
 
