--- a/Bayser-Portal/Ventas/venta.html
+++ b/Bayser-Portal/Ventas/venta.html
@@ -95,39 +95,26 @@
 
 
     <section>
-
-       
-
+        <h1>Ventas</h1>
         <div class="informacion">
-            <h1>Ventas</h1>
-            <div class="imagenventa">
-
+            <div class="imagenventa col-m-2">
                 <img class="pick" src="img/negocio.jpg" alt="">
-
             </div>
-
-            <div class=lineapinta>
-
-            </div>
-
-            <div class="parrafo1">
-
+            <div class=lineapinta></div>
+            <div class="contenido col-m-4">
+            <div class="parrafo">
                 <p>
                     En Bayser Honduras brindamos productos de calidad y de la mas alta tecnología.
                     Con el objetivo de hacer sentir a nuestros clientes seguros con el producto que llevan.
                 </p>
-
             </div>
-
-            <div class="parrafo2">
+            <div class="parrafo">
                 <p>
                     Estamos certificados para brindar basculas de calidad calificadas con altos estándares.
                     Mejores marcas y precios de Honduras.
                 </p>
-
             </div>
-
-
+            </div>
         </div>
 
 
