--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -56,7 +56,6 @@
 
        </section>
 
-
     <section class="caja">
         <div class="contenedor">
             <div class="caja_columna">
@@ -80,6 +79,9 @@
         </div> -->
        
 
+        <div class="imagenlogo">
+            <img class="pick" src="img/LogoGrande.png" alt="">
+        </div>
     
 
 	</header>
