--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -72,6 +72,20 @@
             </div>
         </div>
     </section>
+
+    <!-- <section class="caja">
+        <div class="contenedor">
+            <div class="caja_columna">
+                <svg>
+                    <rect></rect>
+                </svg>
+                <div class="texto">
+                    <h2>¡Nuestro Balance es tu Alegria!</h2>
+                    
+                </div>
+            </div>
+        </div>
+    </section> -->
     
 
         <!-- <div class=lemacaja>
