--- a/Bayser-Portal/Formulario 2/formulario2.html
+++ b/Bayser-Portal/Formulario 2/formulario2.html
@@ -49,7 +49,7 @@
             </ul>
         </nav>
 
-        <section>
+        <section class="contenido">
 
             <div class="informacion">
 
