--- a/Bayser-Portal/Formulario 1/formulario1.html
+++ b/Bayser-Portal/Formulario 1/formulario1.html
@@ -45,7 +45,7 @@
                     </div>
                 </ul> 
         </nav>
-        <section>
+        <section class="contenido">
         <div class="informacion">
 
         <form action="formulario1.html" class="form" method="POST" id="fcot" novalidate>
