--- a/Bayser-Portal/bayser diseño 2/landing.html
+++ b/Bayser-Portal/bayser diseño 2/landing.html
@@ -90,7 +90,7 @@
 
         <!-- <div class=lemacaja>
         <p>¿Necesitas una herramienta util <br> para poder medir
-            tu alcance y tu éxito? <br> Contacta Bayser Honduras Especialistas en Basculas.</p>
+            tu alcance y tu éxito? <br> Contacta Bayser Honduras, Especialistas en Basculas.</p>
         </div> -->
        
 
